# my_backtest

./: .gitignore  pyproject.toml  requirements.txt
backtest/: __init__.py  backtester.py  download_price.py  longshort.ipynb  process_data.ipynb  trend.ipynb  utils.py  weights.ipynb
backtest/data_loader/: __init__.py  base_loader.py  cot_loader.py  price_loader.py  series_loader.py
backtest/estimators/: __init__.py  kalman.py
backtest/notebooks/: cot.ipynb  cot_data.ipynb  snd.ipynb  snd_corn.ipynb
backtest/utils/: __init__.py  analysis.py  calendar.py  constants.py
backtester_full/: __init__.py
backtester_full/src/: __init__.py
backtester_full/src/analysis/: __init__.py  history_curve.py  signal_analysis.py
backtester_full/src/core/: __init__.py  backtest.py  portfolio.py
backtester_full/src/core/cost_module/: __init__.py  tc.py
backtester_full/src/core/data_loader/: __init__.py  base_loader.py  cot_loader.py  price_loader.py  series_loader.py
backtester_full/src/core/price_module/: __init__.py  future_price.py  nearby_price.py  strategy_price.py  tradables.py  utils.py
commodity/: __init__.py  commodconfig.py  commodity.py  fx.py  rates_calculator.py  storage_cost_calculator.py
data_api/: __init__.py  base.py
data_api/wind/: __init__.py  config.py  downloader.py  example.py  pipeline.py
my_holiday/: __init__.py  cbt.py  dce.py  holiday_utils.py  ice.py
notebooks/: holiday_example.ipynb  wind_api_example.ipynb
other notebooks/: 20260409_machine_try signals W.ipynb  20260409_machine_try signals kw.ipynb  20260409_machine_try signals.ipynb
(+23 files in other folders)
