[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_backtest"
version = "0.1.0"
description = "Backtesting framework"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "pyarrow>=8.0.0",
    "python-dateutil>=2.8.0",
    "pyyaml>=6.0",
    "holidays>=0.50",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numba>=0.55.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_holiday*", "commodity*", "backtest*"]